--- a/_mockUp/src/styl/ITCSS/components/_components.specifics.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.specifics.styl
@@ -37,6 +37,9 @@
     +media-query( screen, max-width 820px )
         rem-fallback( width, 440px )
         rem-fallback( font-size, 32px )
+    +media-query( screen, max-width 490px )
+        rem-fallback( width, 220px )
+        rem-fallback( font-size, 24px )
 .quote__link
     text-shadows( 1.5px, 1.5px, 0, 0.6 )
 
