--- a/_mockUp/src/jade/includes/header.jade
+++ b/_mockUp/src/jade/includes/header.jade
@@ -63,3 +63,4 @@ header(itemscope itemtype="http://schema.org/WPHeader").header
             else
                 span(itemprop="keywords").inline-block.nav__element
                     a(itemprop="url" href="contact.html").element__link Contact
+            span(itemprop="keywords")#login.block.button__login Connexion
