--- a/_mockUp/src/styl/ITCSS/components/_components.forms.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.forms.styl
@@ -82,7 +82,7 @@
 .input__submit
     width 100%
     rem-fallback( font-size, 24px )
-    font-family wf_font-heading
+    font-family wf_font-nav
     text-transform uppercase
     color wf_nav-color
     rem-fallback( padding, 18px 0 )
@@ -113,7 +113,7 @@
 .login__submit
     width 100%
     rem-fallback( font-size, 18px )
-    font-family wf_font-heading
+    font-family wf_font-nav
     text-transform uppercase
     color wf_nav-color
     rem-fallback( padding, 9px 0 )
