--- a/_mockUp/src/jade/blog.jade
+++ b/_mockUp/src/jade/blog.jade
@@ -76,5 +76,7 @@ block footer
 
 block script
     script(src="../js/vendor/modernizr-2.6.2.min.js")
+    script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
     script(src="../js/vendor/jquery.js")
+    script(src="../js/script.js")
     script(src="../js/fresco.js")
