--- a/_mockUp/src/jade/contact.jade
+++ b/_mockUp/src/jade/contact.jade
@@ -115,4 +115,7 @@ block footer
     include includes/footer.jade
 
 block script
-    script(src="js/vendor/modernizr-2.6.2.min.js")
+    script(src="../js/vendor/modernizr-2.6.2.min.js")
+    script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
+    script(src="../js/vendor/jquery.js")
+    script(src="../js/script.js")
