--- a/_mockUp/src/jade/includes/header.jade
+++ b/_mockUp/src/jade/includes/header.jade
@@ -16,11 +16,13 @@ header(itemscope itemtype="http://schema.org/WPHeader").header
                         a(href="#") Inscrivez-vous&nbsp;!
                     input(type="submit" value="Se connecter").login__submit
         //-
-            div.nav__conn
-            p.nav__conn--logout
-                | Bienvenue
-                span.span--spacing Michel
-                a(href="#") (&nbsp;Deconnexion&nbsp;)
+            div.nav__conn.logout--height
+                p.nav__conn--logout
+                    | Bienvenue
+                    span.span--spacing 
+                        | Michel 
+                        a(href="#") (&nbsp;Modifier informations personnel&nbsp;/
+                        a(href="#") &nbsp;Déconnexion&nbsp;)
             
         
         div.nav
