--- a/_mockUp/src/styl/ITCSS/components/_components.header.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.header.styl
@@ -39,6 +39,9 @@
 .nav__conn--logout
     text-align right
     rem-fallback( padding, 12px 24px )
+.logout--height
+    rem-fallback( height, 125px )
+    rem-fallback( margin-bottom, 12px )
 
 .nav__element
     font-family wf_font-nav
