--- a/_mockUp/src/styl/ITCSS/components/_components.forms.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.forms.styl
@@ -82,7 +82,7 @@
 .input__submit
     width 100%
     rem-fallback( font-size, 24px )
-    font-family wf_font-nav
+    font-family wf_font-heading
     text-transform uppercase
     color wf_nav-color
     rem-fallback( padding, 18px 0 )
