--- a/_mockUp/src/jade/inscription.jade
+++ b/_mockUp/src/jade/inscription.jade
@@ -1,9 +1,9 @@
-// - Contact.html
+// - Inscription.html
 
 extends includes/layout
 
 block title
-    title Resto Rallye - Contact
+    title Resto Rallye - Inscription
 
 block header
     - var current = { second: 'html' }
@@ -13,34 +13,65 @@ block content
     div.parallax__img.parallax__img--twenty-two
     div.parallax__body
         div(itemscope itemtype="http://schema.org/Thing")
-            h2(itemprop="headline").gamma Un problème&nbsp;?
-            p(itemprop="description") La moindre question &nbsp;? N'hesiter pas à nous contacter par mail ou via ce formulaire, nous serons heureux de vous répondre.
+            h2(itemprop="headline").gamma Inscrivez-vous&nbsp;!
+            p(itemprop="description") Inscrivez vous à notre site et ne manquer jamais un de nos évènements, soyez toujours avertis en remplissant simplement ce formulaire.
             form.form
                 div.inline-block.form__element
-                    label(for="nomQuestion").hightlight.label__text
+                    label(for="nomInscription").hightlight.label__text
                         | Nom
                         span.span--spacing.asterisque *
-                    input(id="nomQuestion" type="text" placeholder="Doe").input__text
-                div.inline-block.form__element
-                    label(for="prenomQuestion").hightlight.label__text
+                    input(id="nomInscription" type="text" placeholder="John").input__text
+                div.inline-block.form__element    
+                    label(for="prenomInscription").hightlight.label__text
                         | Prénom
                         span.span--spacing.asterisque *
-                    input(id="prenomQuestion" type="text" placeholder="John").input__text
-                div.inline-block.form__element
-                    label(for="sujetQuestion").hightlight.label__text
-                        | Sujet
+                    input(id="prenomInscription" type="text" placeholder="Doe").input__text
+                div.inline-block.form__element    
+                    label(for="addressInscription").hightlight.label__text
+                        | Adresse
                         span.span--spacing.asterisque *
-                    input(id="sujetQuestion" type="text" placeholder="Votre question").input__text
-                div.inline-block.form__element
-                    label(for="mailQuestion").hightlight.label__text
+                    input(id="addressInscription" type="text" placeholder="Rue de la Province, n° 10").input__text
+                div.inline-block.form__element    
+                    label(for="villeInscription").hightlight.label__text
+                        | Ville
+                        span.span--spacing.asterisque *
+                    input(id="villeInscription" type="text" placeholder="Liège").input__text
+                div.inline-block.form__element    
+                    label(for="codePostalInscription").hightlight.label__text
+                        | Code postal
+                        span.span--spacing.asterisque *
+                    input(id="codePostalInscription" type="text" placeholder="4400").input__text
+                div.inline-block.form__element    
+                    label(for="provinceInscription").hightlight.label__text Province
+                    input(id="provinceInscription" type="text" placeholder="Liège").input__text
+                div.inline-block.form__element    
+                    label(for="telInscription").hightlight.label__text
+                        | Téléphone
+                        span.span--spacing.asterisque *
+                    input(id="telInscription" type="text" placeholder="043 44 65 34").input__text
+                div.inline-block.form__element    
+                    label(for="gsmInscription").hightlight.label__text GSM
+                    input(id="gsmInscription" type="text" placeholder="0498 32 72 89").input__text
+                div.inline-block.form__element    
+                    label(for="faxInscription").hightlight.label__text Fax
+                    input(id="faxInscription" type="text" placeholder="0498 32 72 89").input__text
+                div.inline-block.form__element    
+                    label(for="mailInscription").hightlight.label__text
                         | Mail
                         span.span--spacing.asterisque *
-                    input(id="mailQuestion" type="text" placeholder="johndoe@gmail.com").input__text
+                    input(id="mailInscription" type="text" placeholder="John.doe@gmail.com").input__text
+                div.inline-block.form__element    
+                    label(for="pwdInscription").hightlight.label__text
+                        | Mot de passe
+                        span.span--spacing.asterisque *
+                    input(id="pwdInscription" type="text" placeholder="*********").input__text
+                div.inline-block.form__element    
+                    label(for="pwdConfirmInscription").hightlight.label__text
+                        | Confirmer mot de passe
+                        span.span--spacing.asterisque *
+                    input(id="pwdInscription" type="text" placeholder="*********").input__text
                 div.block.form__element--fullSize
-                    label(for="msgQuestion").hightlight.label__text Votre message
-                    textarea(id="msgQuestion" rows="10" placeholder="Votre question").input__text
-                div.block.form__element--fullSize
-                    input(type="submit" value="Envoyez").input__submit
+                    input(type="submit" value="M'inscrire").input__submit
                     label.hightlight.label__text
                         | Tous les champs munis d’un astérisque
                         span.span--spacing.asterisque (*)
