--- a/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
@@ -239,3 +239,23 @@
             background: url("images/parallax/800x500/backgroundImage20.jpg") center fixed no-repeat
         +media-query( screen, max-width 490px )
             background: url("images/parallax/400x200/backgroundImage20.jpg") center fixed no-repeat
+.parallax__img--twenty-two
+    background: url("images/parallax/2560x1707/backgroundImage21.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage21.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1020px )
+            background: url("images/parallax/1280x800/backgroundImage21.jpg") center fixed no-repeat
+        +media-query( screen, max-width 820px )
+            background: url("images/parallax/800x500/backgroundImage21.jpg") center fixed no-repeat
+        +media-query( screen, max-width 490px )
+            background: url("images/parallax/400x200/backgroundImage21.jpg") center fixed no-repeat
+.parallax__img--twenty-three
+    background: url("images/parallax/2560x1707/backgroundImage22.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1920px )
+            background: url("images/parallax/1920x1080/backgroundImage22.jpg") center fixed no-repeat
+        +media-query( screen, max-width 1020px )
+            background: url("images/parallax/1280x800/backgroundImage22.jpg") center fixed no-repeat
+        +media-query( screen, max-width 820px )
+            background: url("images/parallax/800x500/backgroundImage22.jpg") center fixed no-repeat
+        +media-query( screen, max-width 490px )
+            background: url("images/parallax/400x200/backgroundImage22.jpg") center fixed no-repeat
