Fix some rules for smartphone

--- a/_mockUp/src/styl/ITCSS/components/_components.forms.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.forms.styl
@@ -51,6 +51,8 @@
 
     +media-query( screen, max-width 820px )
         rem-fallback( top, 68px )
+    +media-query( screen, max-width 413px )
+        rem-fallback( top, 96px )
     &:hover
         cursor pointer
 
