--- a/_mockUp/src/styl/ITCSS/components/_components.specifics.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.specifics.styl
@@ -40,6 +40,7 @@
     +media-query( screen, max-width 490px )
         rem-fallback( width, 200px )
         rem-fallback( font-size, 24px )
+        rem-fallback( top, -80px )
 .quote__link
     text-shadows( 1.5px, 1.5px, 0, 0.6 )
 
