Correct parallax + navigation menu

--- a/_mockUp/src/jade/evenement.jade
+++ b/_mockUp/src/jade/evenement.jade
@@ -14,7 +14,7 @@ block header
     include includes/header.jade
 
 block content
-    div#slideMap.parallax__img
+    div#slideMap.parallax__map
     div(itemscope itemtype="http://schema.org/FoodEvent").parallax__body
         h2(itemprop="attendee").gamma
             | Resto-Rallye de
