--- a/_mockUp/src/jade/evenements.jade
+++ b/_mockUp/src/jade/evenements.jade
@@ -10,7 +10,7 @@ block header
     include includes/header.jade
 
 block content
-    div#slideMap.parallax__img
+    div#slideMap.parallax__map
     div.parallax__body
         div(itemscope itemtype="http://schema.org/FoodEvent")
             h2(itemprop="headline").gamma
