--- a/_mockUp/src/jade/main.jade
+++ b/_mockUp/src/jade/main.jade
@@ -58,7 +58,7 @@ block content
             li(itemprop="description").tarif__element Le plat principal
             li(itemprop="description").tarif__element Le café et son dessert
             li(itemprop="description").tarif__element Le pousse-café
-            li(itemprop="description").tarif__element + un verre de vin et d'eau dans chaque restaurant
+            li(itemprop="description").tarif__element Ainsi qu'un verre de vin et d'eau dans chaque restaurant
 
     div.parallax__img.parallax__img--four
     div(itemscope itemtype="http://schema.org/Thing").parallax__body
