--- a/_mockUp/src/jade/includes/header.jade
+++ b/_mockUp/src/jade/includes/header.jade
@@ -2,7 +2,7 @@
 
 header(itemscope itemtype="http://schema.org/WPHeader").header
     h1(itemprop="headline").hiddenTitle Bienvenue sur le site de Resto Rallye 
-    nav(itemscope itemtype="http://schema.org/SiteNavigationElement").header__nav
+    nav(itemscope itemtype="http://schema.org/SiteNavigationElement").position--relative.header__nav
         div.nav__conn
             form.form__login
                 div.inline-block.login__element
@@ -25,17 +25,9 @@ header(itemscope itemtype="http://schema.org/WPHeader").header
                     span.span--spacing 
                         | Michel 
                         a(href="#") (&nbsp;Modifier informations personnel&nbsp;/
-                        a(href="#") &nbsp;Déconnexion&nbsp;)
-            
-        
+                        a(href="#") &nbsp;Déconnexion&nbsp;)    
         div.nav
             h2(itemprop="alternativeHeadline").hiddenTitle Menu de navigation du site
-            if current.main
-                span(itemprop="keywords").inline-block.nav__element.nav__element--accueil
-                    a(itemprop="url" href="index.html").element__link Accueil
-            else    
-                span(itemprop="keywords").inline-block.nav__element.nav__element--accueil
-                    a(itemprop="url" href="../index.html").element__link Accueil
             if current.main
                 span(itemprop="keywords").inline-block.nav__element
                     a(itemprop="url" href="html/evenements.html").element__link Événements
@@ -44,18 +36,27 @@ header(itemscope itemtype="http://schema.org/WPHeader").header
                     a(itemprop="url" href="evenements.html").element__link Événements
             if current.main
                 span(itemprop="keywords").inline-block.nav__element
-                    a(itemprop="url" href="html/blog.html").element__link Actualités
+                    a(itemprop="url" href="html/blog.html").element__link Actualités            
             else    
                 span(itemprop="keywords").inline-block.nav__element
-                    a(itemprop="url" href="blog.html").element__link Actualités
+                    a(itemprop="url" href="blog.html").element__link Actualités        
             if current.main
-                span.inline-block.banners
-                    a(itemprop="url" href="index.html").banners__link
-                        img(itemprop="image" src="css/images/links/Ecusson.png", alt="Banners Resto Rallye")
+                span(itemprop="keywords").inline-block.nav__element.banners
+                    a(itemprop="url" href="index.html").element__link Accueil
+                        img(itemprop="image" src="css/images/links/Ecusson.png", alt="Banners Resto Rallye").banners__link
             else    
-                span.inline-block.banners
-                    a(itemprop="url" href="../index.html").banners__link
-                        img(itemprop="image" src="../css/images/links/Ecusson.png", alt="Banners Resto Rallye")
+                span(itemprop="keywords").inline-block.nav__element.banners
+                    a(itemprop="url" href="../index.html").element__link Accueil
+                        img(itemprop="image" src="../css/images/links/Ecusson.png", alt="Banners Resto Rallye").banners__link
+            //-    
+                if current.main
+                    span.inline-block.banners
+                        a(itemprop="url" href="index.html").banners__link
+                            img(itemprop="image" src="css/images/links/Ecusson.png", alt="Banners Resto Rallye")
+                else    
+                    span.inline-block.banners
+                        a(itemprop="url" href="../index.html").banners__link
+                            img(itemprop="image" src="../css/images/links/Ecusson.png", alt="Banners Resto Rallye")
             if current.main
                 span(itemprop="keywords").inline-block.nav__element
                     a(itemprop="url" href="html/restaurants.html").element__link Restaurants
@@ -68,4 +69,4 @@ header(itemscope itemtype="http://schema.org/WPHeader").header
             else
                 span(itemprop="keywords").inline-block.nav__element
                     a(itemprop="url" href="contact.html").element__link Contact
-            span(itemprop="keywords")#login.block.button__login Connexion
+            span(itemprop="keywords")#login.inline-block.nav__element.button__login Mon compte
