--- a/_mockUp/src/styl/ITCSS/components/_components.header.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.header.styl
@@ -31,7 +31,6 @@
     position relative
     border-top 2px solid wf_border-menu
     border-bottom 2px solid wf_border-menu
-
 .nav__conn
     background white
     padding 0
@@ -70,30 +69,31 @@
 
         +media-query( screen, max-width 820px )
             rem-fallback( padding-bottom, 2px )
+
 .banners
     position relative
     rem-fallback( width, 160px )
 
     +media-query( screen, max-width 820px )
-        display none
+        margin 0 auto
 .banners__link
     position absolute
     top -14px
     left 0
 
+    +media-query( screen, max-width 820px )
+        display none
+
 .button__login
     position absolute
-    rem-fallback( top, 6px )
-    rem-fallback( right, 24px )
-    rem-fallback( width, 45px )
-    rem-fallback( height, 45px )
-    background: url("images/links/sprite.png") -90px -50px
-    rem-fallback( text-indent, -1000000px )
+    rem-fallback( top, 0 )
+    rem-fallback( right, 16px )
+    color wf_nav-color
+    opacity 0.6
     transtion( all, 0.25s )
     cursor pointer
 
     +media-query( screen, max-width 820px )
-        rem-fallback( top, 78px )
-        rem-fallback( right, 32px )
+        position static
     &:hover
-        opacity 0.6
+        opacity 1
