--- a/_mockUp/src/styl/ITCSS/objects/_objects.parallax.styl
+++ b/_mockUp/src/styl/ITCSS/objects/_objects.parallax.styl
@@ -13,16 +13,12 @@
 // Parallax placements
 .parallax__img
     position static
-    min-height 80vh
+    min-height 45vh
 
-    +media-query( screen, max-width 1920px )
-        min-height 75vh
     +media-query( screen, max-width 1020px )
-        min-height 60vh
-    +media-query( screen, max-width 820px )
-        min-height 50vh
+        min-height 40vh
     +media-query( screen, max-width 490px )
-        min-height 35vh
+        min-height 25vh
 
 .parallax__body
     rem-fallback( max-width, 1260px )
@@ -34,3 +30,12 @@
         rem-fallback( max-width, 720px )
     +media-query( screen, max-width 490px )
         rem-fallback( max-width, 440px )
+
+.parallax__map
+    position static
+    min-height 60vh
+
+    +media-query( screen, max-width 1020px )
+        min-height 40vh
+    +media-query( screen, max-width 490px )
+        min-height 25vh
